--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <footer>
-        &copy; Filip Biernat 2019
+        todos 2019
     </footer>
 
     <script src="https://unpkg.com/vue"></script>
