--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <div id="app">
         <div class="topbar">
-            <button class="btn pullright">Sign in</button>
-            <button class="btn">Login</button>
+            <a href="#">Sign in</a>
+            <a href="#">Login</a>
+            <a href="#"><i class="fa fa-bars"></i></a>
         </div>
         <div class="title">
             todos
@@ -22,6 +23,7 @@
         <div class="container">
             <div class="tasklist">
                 <div class="taskInputWrapper">
+                    <i class="fa fa-chevron-down"></i>
                     <input id="taskInput" v-on:keyup.enter="addTask" type="text" placeholder="What needs to be done?"
                         autofocus>
                 </div>
